--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="animegirl.jpeg" alt="Anime Girl shit"></td>
       <td><h1>91 Xuange</h1>
-      <p><em>Founder and CTO of the <strong><a href="https://www.appbrewery.co/">App Brewery.</a></strong></em></p>
+      <p><em>Founder and CTO of the <strong><a href="https://www.appbrewery.co/">App Brewery.</a>Just Kidding!</strong></em></p>
       <p><em><strong>I am a iOS and Web Developer mothafucka! Love anime girl.</strong></em></p></td>
     </tr>
   </table>
